# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yml
hexlet_code/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/: admin.py  constants.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_label.py  0003_task.py
task_manager/statuses/: urls.py  views.py
task_manager/tasks/: urls.py  views.py
task_manager/templates/: base.html  index.html  label_create.html  label_delete.html  label_update.html  labels.html  status_create.html  status_delete.html  status_update.html  statuses.html  task_create.html  task_delete.html  task_detail.html  task_update.html  tasks.html  user_delete.html  user_update.html  users.html
task_manager/templates/labels/: label_delete.html  label_update.html  labels.html
task_manager/templates/statuses/: status_create.html  status_delete.html
task_manager/templates/tasks/: task_delete.html  task_detail.html  tasks.html
task_manager/templates/users/: login.html  registration.html
task_manager/users/: urls.py  views.py
