[project]
name = "python-project-52"
version = "0.1.0"
description = "Task Manager - учебный проект на Django"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Andy", email = "andrei.karpenkin@gmail.com"},
]
dependencies = [
    "django>=6.0.2",
    "gunicorn>=25.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["hexlet_code", "task_manager"]
