[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager - учебный проект на Django"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Andy", email = "andrei.karpenkin@gmail.com"},
]
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "rollbar>=1.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["hexlet_code", "task_manager"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.4",
]

[tool.coverage.run]
source = ["task_manager"]
omit = ["*/migrations/*", "*/tests.py"]
